# OpenEnv-

./: DockerFile  Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  upload_to_hf.py
server/: app.py  dc_environment.py  environment.py
